hphp/test/zend/good/ext/spl/tests/arrayObject_setFlags_basic2.php.expectf
string(6) "secret"
string(6) "public"
string(6) "secret"

Fatal error: Cannot access private property C::$x in %s/arrayObject_setFlags_basic2.php on line 19
